// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";


package pusModelEditorMessages.protobuf;

message DataStructure {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER dataType = 1;
  optional ccsds_mal.protobuf.TIME groundDate = 2;
  optional ccsds_mal.protobuf.BLOB payload = 3;
}
